--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -19,11 +19,13 @@
     "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@tanstack/react-query": "^5.90.21",
-    "axios": "^1.6.7",
+    "axios": "^1.13.6",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.71.2",
     "react-hot-toast": "^2.6.0",
     "react-is": "^19.2.4",
     "react-router-dom": "^6.21.0",
